# evmx

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.local.yml  docker-compose.production.yml  docker-compose.yml  init_env.sh  manage.py  pyproject.toml
compose/local/django/: Dockerfile  start
compose/local/django/celery/beat/: start
compose/local/django/celery/worker/: start
compose/local/django/monitoring/: start
compose/production/django/: Dockerfile  entrypoint  start
compose/production/django/celery/beat/: start
compose/production/django/celery/worker/: start
compose/production/django/monitoring/: start
compose/production/nginx/: Dockerfile  default.conf
compose/production/postgres/maintenance/: backup  restore
config/: api_router.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
config/settings/unfold/: admin.py  console.py
evmx/analysis/: admin.py  models.py  serializers.py  tasks.py  utils.py
evmx/analysis/migrations/: 0001_initial.py  0002_alter_dailyflow_deposits_alter_dailyflow_invoices_and_more.py
evmx/chains/: admin.py  apps.py  constants.py  dev.py  models.py  monitoring.py  serializers.py  tasks.py
evmx/chains/data/: chains.json  erc20_invoice.txt  eth_invoice.txt  slugs.json
evmx/chains/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_initial.py  0005_alter_account_options.py  0006_alter_transaction_block.py  0007_delete_historicalchain.py  0008_alter_chain_block_confirmations_count.py
evmx/chains/tests/: test_models.py
evmx/chains/utils/: __init__.py  account.py  contract.py  create2.py  transactions.py
evmx/chains/utils/contracts/: ERC20Invoice.sol  ETHInvoice.sol
evmx/common/: admin.py  consts.py  decorators.py  fields.py  http_codes.py  logger.py  middlewares.py  params.py  permissions.py
evmx/common/utils/: crypto.py  security.py  time.py
evmx/deposits/: admin.py  apps.py  models.py  tasks.py  viewsets.py
evmx/deposits/migrations/: 0001_initial.py  0002_initial.py  0003_deposit_project.py  0004_alter_deposit_player.py  0005_alter_deposit_value.py  0006_alter_deposit_worth.py
evmx/globals/: admin.py  apps.py  models.py  signals.py  utils.py
evmx/globals/management/commands/: init_evmx.py
evmx/globals/migrations/: 0001_initial.py  0002_initial.py  0003_historicalproject_active_project_active_and_more.py  0004_alter_historicalproject_appid_and_more.py  0005_alter_project_options.py  0006_historicalproject_owner_project_owner.py  0007_alter_historicalproject_name_alter_project_name.py  0008_alter_project_owner.py  0009_alter_historicalproject_owner_alter_project_owner.py  0010_alter_historicalproject_collection_address_and_more.py  0011_alter_historicalproject_owner_alter_project_owner.py  0012_delete_historicalproject.py  0013_alter_project_gather_worth_and_more.py
evmx/invoices/: admin.py  apps.py  models.py  serializers.py  tasks.py  viewsets.py
evmx/invoices/migrations/: 0001_initial.py  0002_initial.py  0003_invoice_type.py  0004_invoice_expired_invoice_original_value_and_more.py  0005_rename_no_invoice_sys_no_and_more.py  0006_rename_out_no_invoice_no_and_more.py  0007_alter_invoice_no_alter_invoice_sys_no.py  0008_alter_invoice_actual_value_and_more.py  0009_collectionaddressfordiffer.py  0010_alter_collectionaddressfordiffer_options_and_more.py  0011_alter_invoice_init_code_alter_invoice_salt.py  0012_remove_invoice_expired_and_more.py  0013_alter_invoice_type.py  0014_alter_invoice_type.py  0015_alter_invoice_actual_value_and_more.py
evmx/notifications/: admin.py  apps.py  models.py  tasks.py
evmx/notifications/migrations/: 0001_initial.py  0002_remove_notification_project.py  0003_notification_project.py
evmx/snapshots/: apps.py
evmx/templates/: 500.html  base.html
evmx/templates/admin/: base_site.html  index.html
evmx/templates/unfold/helpers/: tab_list.html
evmx/tokens/: admin.py  apps.py  models.py  signals.py  tasks.py
evmx/tokens/migrations/: 0001_initial.py  0002_initial.py  0003_alter_tokentransfer_transaction.py  0004_alter_balance_account_alter_balance_chain_and_more.py  0005_remove_historicaltokenaddress_chain_and_more.py  0006_alter_token_price_in_usd.py
evmx/users/: admin.py  models.py
evmx/users/migrations/: 0001_initial.py
evmx/withdrawals/: admin.py  apps.py  models.py  serializers.py  utils.py  viewsets.py
evmx/withdrawals/migrations/: 0001_initial.py  0002_alter_withdrawal_no_alter_withdrawal_unique_together.py  0003_alter_withdrawal_no.py  0004_alter_withdrawal_player.py  0005_alter_withdrawal_value.py  0006_alter_withdrawal_worth.py
locale/: README.md
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
